# spinalhdl-tech-talk

./: .dockerignore  .gitignore  Jenkinsfile  README.md  build.sbt  pylama.ini  pyproject.toml  run
docs/: conf.py  index.rst
project/: plugins.sbt
src/main/scala/spinalttl/: AndGate.scala  Counter.scala  Decoder.scala  Toplevel.scala
src/main/tut/: Talk.md
src/test/scala/spinalttl/: TestAndGate.scala  TestCounter.scala  TestDecoder.scala
test/: test_spinalhdl-tech-talk.py
