[tool.poetry]
name = "spinalhdl-tech-talk"
version = "0.1.0"
description = ""
authors = ["ADTRAN"]

[tool.poetry.dependencies]
python = "^3.6"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.adtran.com/artifactory/api/pypi/pypi/simple"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pylama = "^7.6"
pylint = "^2.2"
pytest-cov = "^2.6"
black = "18.9b0"
sphinx = "^2.0"
docutils = "0.15"

[tool.porg]
base_docker_image = "artifactory.adtran.com:443/docker_adtran-local/porg-base-image:1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
